# avito-bot

./: .env.example  .gitignore  .replit  README.md  pyproject.toml  replit.nix  requirements.txt  run.py
app/: __init__.py  config.py  db.py  models.py  schemas.py
app/ai/: analyzer.py  gemini.py  prompts.py
app/bot/: formatting.py  handlers.py  keyboards.py  main.py
app/core/: calibration.py  deals.py  opportunities.py  pricebook.py  reminders.py  scoring.py  sources.py
app/watcher/: avito.py  monitor.py  searches.py
app/web/: api.py  security.py
app/web/static/: app.js  index.html  style.css
data/: pricebook.json  searches.json
tests/: conftest.py  test_calibration_and_stats.py  test_config.py  test_pricebook.py  test_reminders.py  test_scoring.py  test_searches.py  test_security.py
