[project]
name = "solomoney-avito-os"
version = "1.0.0"
description = "Личный AI-агент для арбитража товаров на Avito: мониторинг, Gemini-анализ, Telegram-бот, Mini App"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "SQLAlchemy>=2.0.35",
    "aiosqlite>=0.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "google-genai>=1.0.0",
    "playwright>=1.47",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
